[package]
name = "parmake"
version = "0.1.0"
edition = "2021"
description = "A multithreaded make"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
